	PR target/13585 	* sh-protos.h (check_use_sfunc_addr): Declare. 	* sh.c (extract_sfunc_addr, check_use_sfunc_addr): New functions. 	* sh.md (use_sfunc_addr): Use check_use_sfunc_addr in insn predicate.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@75717 138bc75d-0d04-0410-961f-82ee72b054a4