gcc/config/sh/sh-protos.h
@@ -125,6 +125,7 @@ extern bool sh_cannot_change_mode_class
 extern void sh_mark_label (rtx, int);
 extern int sh_register_move_cost
   (enum machine_mode mode, enum reg_class, enum reg_class);
+extern int check_use_sfunc_addr (rtx, rtx);
 
 #ifdef HARD_CONST
 extern void fpscr_set_from_mem (int, HARD_REG_SET);
